@@ -1,17 +1,14 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.micro.model.calciumchloride;
 
-import java.awt.*;
 import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
-import edu.colorado.phet.sugarandsaltsolutions.common.util.Units;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Bond;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Crystal;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.LatticeConstituent;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle;
-
-import static edu.colorado.phet.sugarandsaltsolutions.micro.model.MicroModel.sizeScale;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.CalciumIonParticle;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.ChlorideIonParticle;
 
 /**
  * This crystal for Calcium Chloride salt updates the positions of the molecules to ensure they move as a crystal
@@ -31,23 +28,17 @@ public class CalciumChlorideCrystal extends Crystal {
 
     //Recursive method to traverse the graph and create particles
     private void fill( CalciumChlorideLattice lattice, edu.colorado.phet.sugarandsaltsolutions.micro.model.Component component, ArrayList<edu.colorado.phet.sugarandsaltsolutions.micro.model.Component> handled, ImmutableVector2D relativePosition ) {
-        final double chlorideRadius = Units.picometersToMeters( 181 ) * sizeScale;
-        final double calciumRadius = Units.picometersToMeters( 100 ) * sizeScale;
-
-        //TODO: fix the spacing
-        final double spacing = chlorideRadius + calciumRadius;
-        ImmutableVector2D zero = new ImmutableVector2D( 0, 0 );
-
         //Calcium
         if ( component instanceof edu.colorado.phet.sugarandsaltsolutions.micro.model.Component.CalciumIon ) {
-            latticeConstituents.add( new LatticeConstituent( new SphericalParticle( chlorideRadius, zero, Color.red ), relativePosition ) );
+            latticeConstituents.add( new LatticeConstituent( new CalciumIonParticle(), relativePosition ) );
         }
         //Chloride
         else {
-            latticeConstituents.add( new LatticeConstituent( new SphericalParticle( calciumRadius, zero, Color.blue ), relativePosition ) );
+            latticeConstituents.add( new LatticeConstituent( new ChlorideIonParticle(), relativePosition ) );
         }
         handled.add( component );
         ArrayList<Bond> bonds = lattice.getBonds( component );
+        final double spacing = new CalciumIonParticle().radius + new ChlorideIonParticle().radius;
         for ( Bond bond : bonds ) {
             if ( !handled.contains( bond.destination ) ) {
                 fill( lattice, bond.destination, handled, relativePosition.plus( getDelta( spacing, bond ).getRotatedInstance( angle ) ) );
