@@ -1,17 +1,16 @@
 package edu.colorado.phet.sugarandsaltsolutions.micro.model.sodiumchloride;
 
-import java.awt.*;
 import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
-import edu.colorado.phet.sugarandsaltsolutions.common.util.Units;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Bond;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Component.SodiumIon;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Crystal;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.LatticeConstituent;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.MicroModel;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.SodiumIonParticle;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.ChlorideIonParticle;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.SodiumIonParticle;
+
+import static edu.colorado.phet.common.phetcommon.math.ImmutableVector2D.ZERO;
 
 /**
  * This crystal for Sodium Chloride salt updates the positions of the molecules to ensure they move as a crystal
@@ -26,18 +25,17 @@ public class SodiumChlorideCrystal extends Crystal {
         fill( lattice, lattice.components.getFirst(), new ArrayList<edu.colorado.phet.sugarandsaltsolutions.micro.model.Component>(), new ImmutableVector2D() );
 
         //Update positions so the lattice position overwrites constituent particle positions
-        stepInTime( new ImmutableVector2D(), 0.0 );
+        stepInTime( ZERO, 0.0 );
     }
 
     //Recursive method to traverse the graph and create particles
     private void fill( SodiumChlorideLattice lattice, edu.colorado.phet.sugarandsaltsolutions.micro.model.Component component, ArrayList<edu.colorado.phet.sugarandsaltsolutions.micro.model.Component> handled, ImmutableVector2D relativePosition ) {
-        final double chlorideRadius = Units.picometersToMeters( 181 ) * MicroModel.sizeScale;
-        final double spacing = chlorideRadius + SodiumIonParticle.radius;
+        final double spacing = new ChlorideIonParticle().radius + new SodiumIonParticle().radius;
         if ( component instanceof SodiumIon ) {
             latticeConstituents.add( new LatticeConstituent( new SodiumIonParticle(), relativePosition ) );
         }
         else {
-            latticeConstituents.add( new LatticeConstituent( new SphericalParticle( chlorideRadius, new ImmutableVector2D( 0, 0 ), Color.blue ), relativePosition ) );
+            latticeConstituents.add( new LatticeConstituent( new ChlorideIonParticle(), relativePosition ) );
         }
         handled.add( component );
         ArrayList<Bond> bonds = lattice.getBonds( component );
